old_fargate_scripts/eks_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-app-manifest
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-app
  template:
    metadata:
      labels:
        app: ml-app
    spec:
      containers:
        - name: back-end
          # TODO: handover parameter with Dockerpath instead of hard-coding
          image: 017792502591.dkr.ecr.us-east-1.amazonaws.com/ml_app:latest
          ports:
            - containerPort: 8000
