old_fargate_scripts/fargate_loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ml-app-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: ml-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
