old_fargate_scripts/fargate_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-app-service
  namespace: ml-app
  labels:
    app: ml-app
spec:
  type: NodePort
  selector:
    app: ml-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
