old_fargate_scripts/fargate_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ml-app-ingress
  namespace: ml-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ml-app-service
              servicePort: 8080
